# gcp-api-gateway-service-account-demo

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  open-api-api-gateway.yaml  open-api-v1.yaml  pyproject.toml
src/: generate_token_demo.py  main.py
src/data/: product_faker.py
src/models/: product_model.py
src/routes/: product_router.py
src/services/: product_service.py
